src/styles/app.scss
//Mobile View
#main-area{
  padding-top: 10vh;
  background-color: #10394a;
  padding-left: 6vw;
  padding-right: 6vw;

  
  .area-section{
    color: #ffffff;
    display: flex;
    flex-direction: column;

    .section-header{
      color:#e6bd41;
      margin-bottom: 8px;
      text-align: center;
      display: flex;
      justify-content: center;
      align-content: center;
      border: solid 1px;
      border-radius: 8px;
    }
    .section-body{
      margin-top: 8px;
      margin-bottom: 8px;
      padding-left: 5vw;
      padding-right: 5vw;
      text-align: justify;
    }
  }
}

//Desktop View
@media only screen and (min-width: 481px){
  #main-area{
    justify-content: space-around;
  
    
    .area-section{
      align-items: center;
  
      .section-header{
        width: 700px;
      }
      .section-body{
        padding: 0;
        width: 700px;
      }
    }
  }
}

